testing out branching

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="flex-vertical">
     <img src="https://clubs-cu.s3.amazonaws.com/Spectator+Publishing+Logo.png" alt="Spectator Logo" class="logo">
     <h1>Spectator's Sources</h1>
-    <div class="search-container"> <!-- all material -->
+    <div class="search-container">
         <div class="source-container">
             <h2>Source Name:</h2>
             <div class="input-field"></div>
